syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";
import "AbilityString.proto";
import "AbilityScalarValueEntry.proto";


message AbilityAppliedAbility {
	uint32 instanced_ability_id = 4;
	AbilityString ability_override = 2;
	AbilityString ability_name = 1;
	repeated AbilityScalarValueEntry override_map = 3;
}